test/parser/newline-inside-string-literal.delta
// RUN: %check_errors %not %delta -parse %s

void main() {
    // CHECK: [[@LINE+1]]:15: error: newline inside string literal
    var i = "a
    ";
}
